--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "dotenv": "^16.4.5",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "rehackt": "^0.1.0",
-    "dotenv": "^16.4.5"
+    "url-join": "^5.0.0"
   }
 }
