Add customer-focused support to the Dummy API
* Minor tidy-ups to clearly separate user/company elements
* user.js example to access spam reports

--- a/dot.env.sample
+++ b/dot.env.sample
@@ -1,2 +1,4 @@
 TNID_CLIENT_ID: '???'
 TNID_CLIENT_SECRET: '???'
+USER_ME_PHONENUMBER: '+44,,,,'
+USER_TOKEN: 'as returned after providing your OTP to the user.js script'
