--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "rehackt": "^0.1.0",
+    "stdio": "^2.1.3",
     "url-join": "^5.0.0"
   }
 }
